Aligned content on the home page and made the navbar fixed.

--- a/css/home.css
+++ b/css/home.css
@@ -29,11 +29,6 @@ section {
     position: relative;
 }
 
-.navbar.scrolled {
-    background-color: #f8f9fa; /* Change this to the desired background color */
-    /* transition: background-color 0.3s ease-in-out; */
-}
-
 /* Prevent overscrolling in the last section. */
 section:last-of-type {
     overscroll-behavior-block: contain;
